--- a/styles.css
+++ b/styles.css
@@ -353,3 +353,37 @@ nav {
   flex: 1; /* Esto hace que el texto ocupe todo el espacio disponible */
   font-size: 16px;
 }
+
+/* buscador de tareas */
+
+.buscador-container {
+    padding: 0 20px 15px 20px; /* Espacio lateral y abajo */
+    background: #171717;       /* Mismo fondo que el formulario */
+}
+
+#input-buscador {
+    width: 100%;
+    padding: 10px 15px;
+    border: 2px solid #ddd;
+    border-radius: 20px; /* Más redondeado para diferenciarlo del input de agregar */
+    font-size: 15px;
+    outline: none;
+    transition: border-color 0.3s;
+}
+
+#input-buscador:focus {
+    border-color: #3498db;
+}
+
+/* --- Ajuste para Modo Oscuro --- */
+/* Agregamos el buscador a la lista de cosas que se oscurecen */
+[data-theme="dark"] .buscador-container {
+    background-color: #2d2d2d; /* Se funde con el formulario */
+    border-color: #404040;
+}
+
+[data-theme="dark"] #input-buscador {
+    background-color: #1a1a1a;
+    border-color: #555;
+    color: white;
+}
